Nitpick to make it clear chris both worked on and imported sequence
git-svn-id: https://svn.concert.cs.cmu.edu/cmlib/trunk/lib@122 6d400789-28b8-4594-b351-acd018ce6481

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-Chris Martens - Importing the 15-210 library's SEQUENCE
+Chris Martens - 15-210 library (Sequence) contributions, imported SEQUENCE
 Ian Ernest Voysey - 15-210 library (Sequence) contributions
 Kanat Tangwongsan - 15-210 library (Sequence) contributions
 Karl Crary - Primary development
