stop nitpicking rob
git-svn-id: https://svn.concert.cs.cmu.edu/cmlib/trunk/lib@123 6d400789-28b8-4594-b351-acd018ce6481

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,6 @@
 Chris Martens - 15-210 library (Sequence) contributions, imported SEQUENCE
 Ian Ernest Voysey - 15-210 library (Sequence) contributions
 Kanat Tangwongsan - 15-210 library (Sequence) contributions
-Karl Crary - Primary development
+Karl Crary - Primary developer
 Robert J. Simmons - Pos and Coord
 William Lovas - Merge sort
