added Rowan to AUTHORS
git-svn-id: https://svn.concert.cs.cmu.edu/cmlib/trunk/lib@126 6d400789-28b8-4594-b351-acd018ce6481

--- a/AUTHORS
+++ b/AUTHORS
@@ -4,3 +4,4 @@ Kanat Tangwongsan - 15-210 library (Sequence) contributions
 Karl Crary - Primary developer
 Robert J. Simmons - Pos and Coord
 William Lovas - Merge sort
+Rowan Davies - leftist and pairing heaps
