--- a/AUTHORS
+++ b/AUTHORS
@@ -1,7 +1,7 @@
-Chris Martens - 15-210 library (Sequence) contributions, imported SEQUENCE
+Chris Martens - 15-210 library (Sequence) contributions, imported Sequence
 Ian Ernest Voysey - 15-210 library (Sequence) contributions
 Kanat Tangwongsan - 15-210 library (Sequence) contributions
 Karl Crary - Primary developer
 Robert J. Simmons - Pos and Coord
-William Lovas - Merge sort
 Rowan Davies - leftist and pairing heaps
+William Lovas - Merge sort
