--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,6 @@
 Chris Martens - 15-210 library (Sequence) contributions, imported Sequence
+Filip Sieczkowski - Sum 
+Guy Blelloch - 15-210 library (Sequence) contributions
 Ian Ernest Voysey - 15-210 library (Sequence) contributions
 Kanat Tangwongsan - 15-210 library (Sequence) contributions
 Karl Crary - Primary developer
