--- a/AUTHORS
+++ b/AUTHORS
@@ -4,6 +4,6 @@ Guy Blelloch - 15-210 library (Sequence) contributions
 Ian Ernest Voysey - 15-210 library (Sequence) contributions
 Kanat Tangwongsan - 15-210 library (Sequence) contributions
 Karl Crary - Primary developer
-Robert J. Simmons - Pos and Coord
+Robert J. Simmons - Pos and Coord, testing code
 Rowan Davies - leftist and pairing heaps
-William Lovas - Merge sort
+William Lovas - Merge sort, testing code
