--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,10 @@ Other changes since 3.0.0
 
 * Added Finally : FINALLY.
 
+* Added wraptest to PARSING.
+
+* Added TopologicalSort and TOPOLOGICAL_SORT.
+
 -----
 	
 Incompatible changes from 2.3.0 to 3.0.0
