--- a/CHANGELOG
+++ b/CHANGELOG
@@ -42,6 +42,8 @@ Other changes since 3.0.0
 
 * Made reseeding more reproducible in MTRand32.
 
+* Added IntInf operations to FROM_STRING.
+
 -----
 	
 Incompatible changes from 2.3.0 to 3.0.0
