small hashing improvements

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -24,7 +24,7 @@ Other changes since 3.0.0
 
 * Added OptionMonad and ListMonad.
 
-* Added ProductHashable, TripleHashable, and Word32Hashable.
+* Added ProductHashable, TripleHashable, WordHashable, and Word32Hashable.
 
 * Added Void : VOID.
 
